istio/flexkart-dev.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flexkart-destination-rule
  host: frontend-service.flexkart.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1.0

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - grafana.web.demo
        - flexkart.web.demo
        - kiali.web.demo
        - prometheus.web.demo
        - tracing.web.demo
        - zipkin.web.demo

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
spec:
  hosts:
    - grafana.web.demo
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtual-service
spec:
  hosts:
    - kiali.web.demo
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtual-service
spec:
  hosts:
    - prometheus.web.demo
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-virtual-service
spec:
  hosts:
    - tracing.web.demo
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zipkin-virtual-service
spec:
  hosts:
    - zipkin.web.demo
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            host: zipkin.istio-system.svc.cluster.local
            port:
              number: 9411

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flexkart-virtual-service
spec:
  hosts:
    - flexkart.web.demo
  gateways:
    - default-gateway
  http:
    - route:
        - destination:
            host: frontend-service.flexkart.svc.cluster.local
            port:
              number: 80
            subset: v1
          weight: 100
      fault:
        abort:
          percentage:
            value: 5
          httpStatus: 400
        delay:
          percentage:
            value: 10
          fixedDelay: 5s
      retries:
        attempts: 3
        perTryTimeout: "2s"
        retryOn: "5xx"
      timeout: "10s"
